--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -2,7 +2,7 @@ backend:
   name: git-gateway
   branch: main
 locales: "tr"
-media_folder: "assets/images" 
+media_folder: "static/images" 
 public_folder: "/images"
 collections:
   - name: "posts" 
