--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -2,8 +2,8 @@ backend:
   name: git-gateway
   branch: main
 locales: "tr"
-media_folder: "static/images" 
-public_folder: "/images"
+media_folder: "static/images/uploads" 
+public_folder: "/images/uploads"
 use_relative_media_paths: false
 collections:
   - name: "posts" 
