--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -9,6 +9,8 @@ collections:
   - name: "posts" 
     label: "Gönderiler" 
     folder: "content/posts"
+    media_folder: "static/images/uploads" 
+    public_folder: "/images/uploads"
     path: "{{slug}}"
     create: true 
     fields: 
