--- a/hugo.toml
+++ b/hugo.toml
@@ -5,11 +5,11 @@ title = 'Adımlar'
 theme = 'pehtheme-hugo'
 
 summaryLength = 20 # <- 20 words are approximately 160 characters
-googleAnalytics = 'G-MEASUREMENT_ID' # <- Your GA-4
+#googleAnalytics = 'G-MEASUREMENT_ID' # <- Your GA-4
 
 [params]
 	# Meta description, not exceeding 160 characters, used for the meta description within the HTML head
-	description = 'Pehtheme Hugo Lite: A minimalist Hugo theme, built with TailwindCSS, for efficient performance and minimalism.'
+	description = 'Adımlar: Ankara Üniversitesi Atatürkçü Düşünce Topluluğu dergisi'
 	mainSections = 'posts'
 	searchSections = 'posts'
 
