--- a/public/admin/config.yml
+++ b/public/admin/config.yml
@@ -1,13 +1,14 @@
 backend:
   name: git-gateway
   branch: main
-media_folder: "static/images" 
-public_folder: "images"
+locales: "tr"
+media_folder: "assets/images/" 
+public_folder: "/images"
+use_relative_media_paths: false
 collections:
   - name: "posts" 
     label: "Gönderiler" 
     folder: "content/posts"
-    path: "{{slug}}"
     create: true 
     fields: 
       - { label: "Başlık", name: "title", widget: "string" }
